--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,14 @@
 ---
-abstract: 'Interact with Fedora''s bugzilla instance '
+abstract: "Interact with Fedora's bugzilla instance "
 author:
   - 'Chris Weyl <cweyl@alumni.drew.edu>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.80'
+generated_by: 'Module::Install version 0.91'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,6 +19,43 @@ no_index:
     - inc
     - t
     - xt
+provides:
+  Fedora::Bugzilla:
+    file: lib/Fedora/Bugzilla.pm
+    version: 0.11
+  Fedora::Bugzilla::Bug:
+    file: lib/Fedora/Bugzilla/Bug.pm
+    version: 0.11
+  Fedora::Bugzilla::Bug::Attachment:
+    file: lib/Fedora/Bugzilla/Bug/Attachment.pm
+    version: 0.11
+  Fedora::Bugzilla::Bug::Comment:
+    file: lib/Fedora/Bugzilla/Bug/Comment.pm
+    version: 0.11
+  Fedora::Bugzilla::Bug::Flag:
+    file: lib/Fedora/Bugzilla/Bug/Flag.pm
+    version: 0.11
+  Fedora::Bugzilla::Bug::NewAttachment:
+    file: lib/Fedora/Bugzilla/Bug/NewAttachment.pm
+    version: 0.11
+  Fedora::Bugzilla::Bugs:
+    file: lib/Fedora/Bugzilla/Bugs.pm
+    version: 0.11
+  Fedora::Bugzilla::NewBug:
+    file: lib/Fedora/Bugzilla/NewBug.pm
+    version: 0.11
+  Fedora::Bugzilla::QueriedBugs:
+    file: lib/Fedora/Bugzilla/QueriedBugs.pm
+    version: 0.11
+  Fedora::Bugzilla::Role::NewHash:
+    file: lib/Fedora/Bugzilla/Role/NewHash.pm
+    version: 0.11
+  Fedora::Bugzilla::Types:
+    file: lib/Fedora/Bugzilla/Types.pm
+    version: 0.11
+  Fedora::Bugzilla::XMLRPC:
+    file: lib/Fedora/Bugzilla/XMLRPC.pm
+    version: 0.11
 requires:
   Crypt::SSLeay: 0
   DateTime::Format::Pg: 0
@@ -40,5 +80,7 @@ requires:
   XML::Twig: 0
   namespace::clean: 0
 resources:
-  repository: http://hg.fedoraproject.org//hg/camelus
-version: 0.10
+  homepage: http://github.com/RsrchBoy/fedora-bugzilla/tree
+  license: http://opensource.org/licenses/lgpl-license.php
+  repository: git://github.com/RsrchBoy/fedora-bugzilla.git
+version: 0.11
