Import of RSRCHBOY/Fedora-Bugzilla-0.12.tar.gz from CPAN.
gitpan-cpan-distribution: Fedora-Bugzilla
gitpan-cpan-version:      0.12
gitpan-cpan-path:         RSRCHBOY/Fedora-Bugzilla-0.12.tar.gz
gitpan-cpan-author:       RSRCHBOY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -22,40 +22,40 @@ no_index:
 provides:
   Fedora::Bugzilla:
     file: lib/Fedora/Bugzilla.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Bug:
     file: lib/Fedora/Bugzilla/Bug.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Bug::Attachment:
     file: lib/Fedora/Bugzilla/Bug/Attachment.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Bug::Comment:
     file: lib/Fedora/Bugzilla/Bug/Comment.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Bug::Flag:
     file: lib/Fedora/Bugzilla/Bug/Flag.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Bug::NewAttachment:
     file: lib/Fedora/Bugzilla/Bug/NewAttachment.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Bugs:
     file: lib/Fedora/Bugzilla/Bugs.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::NewBug:
     file: lib/Fedora/Bugzilla/NewBug.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::QueriedBugs:
     file: lib/Fedora/Bugzilla/QueriedBugs.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Role::NewHash:
     file: lib/Fedora/Bugzilla/Role/NewHash.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::Types:
     file: lib/Fedora/Bugzilla/Types.pm
-    version: 0.11
+    version: 0.12
   Fedora::Bugzilla::XMLRPC:
     file: lib/Fedora/Bugzilla/XMLRPC.pm
-    version: 0.11
+    version: 0.12
 requires:
   Crypt::SSLeay: 0
   DateTime::Format::Pg: 0
@@ -64,7 +64,8 @@ requires:
   MIME::Base64: 0
   Moose: 0
   Moose::Util::TypeConstraints: 0
-  MooseX::AttributeHelpers: 0
+  MooseX::AttributeHelpers: 0.21
+  MooseX::CascadeClearing: 0
   MooseX::MultiInitArg: 0
   MooseX::StrictConstructor: 0
   MooseX::Traits::Attribute::CascadeClear: 0
@@ -83,4 +84,4 @@ resources:
   homepage: http://github.com/RsrchBoy/fedora-bugzilla/tree
   license: http://opensource.org/licenses/lgpl-license.php
   repository: git://github.com/RsrchBoy/fedora-bugzilla.git
-version: 0.11
+version: 0.12
